[gd_scene load_steps=4 format=3 uid="uid://ceaqpt83naqpf"]

[ext_resource type="Script" uid="uid://baoe2e81nopok" path="res://scripts/connector.gd" id="1_ti7c2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6xl0"]
size = Vector2(1, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tipki"]
size = Vector2(1, 48)

[node name="Connector" type="Node2D"]
script = ExtResource("1_ti7c2")

[node name="R_ColorRect" type="ColorRect" parent="."]
offset_left = 335.0
offset_top = -60.0
offset_right = 375.0
offset_bottom = -12.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="R_ColorRect"]
position = Vector2(-10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="R_ColorRect/Area2D"]
position = Vector2(19.5, 24)
shape = SubResource("RectangleShape2D_o6xl0")

[node name="L_ColorRect" type="ColorRect" parent="."]
offset_left = -378.0
offset_top = -60.0
offset_right = -338.0
offset_bottom = -12.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="L_ColorRect"]
position = Vector2(37, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="L_ColorRect/Area2D"]
position = Vector2(-6, 24)
shape = SubResource("RectangleShape2D_tipki")

[connection signal="body_entered" from="R_ColorRect/Area2D" to="." method="_on_right_area_2d_body_entered"]
[connection signal="body_exited" from="R_ColorRect/Area2D" to="." method="_on_right_area_2d_body_exited"]
[connection signal="body_entered" from="L_ColorRect/Area2D" to="." method="_on_left_area_2d_body_entered"]
[connection signal="body_exited" from="L_ColorRect/Area2D" to="." method="_on_left_area_2d_body_exited"]
